# FZXEngine

./: CMakeLists.txt  README.md
inc/: CMakeLists.txt
inc/Math/: Math.hpp
inc/Scripting/: Signal.hpp
src/: CMakeLists.txt  main.cpp
src/Engine/: Engine.hpp
src/Engine/Component/: Component.h  Shape2D.hpp  Transform2D.hpp
src/Engine/Component/Shape/: Shape.h  Shape.hpp
src/Engine/Component/Shape/2D/: Circle2D.cpp  Circle2D.hpp  Rect2D.cpp  Rect2D.hpp  Shape2D.h  Shape2D.hpp
src/Engine/Component/Transform/: Transform.h  Transform.hpp  Transform2D.hpp
src/Engine/Components/: Transform2D.hpp
src/Engine/Object/: Object.h  Object.hpp
src/Engine/Object/2D/: Collision2D.cpp  Collision2D.hpp  Object2D.cpp  Object2D.h  Object2D.hpp
src/Engine/Object/2D/PhysicsBody2D/: PhysicsBody2D.cpp  PhysicsBody2D.h  PhysicsBody2D.hpp  RigidBody2D.cpp  RigidBody2D.hpp  StaticBody2D.cpp  StaticBody2D.hpp
src/Engine/Renderer/: GLShaderManager.cpp  GLShaderManager.hpp
src/Engine/Renderer/2D/: Renderer2D.cpp  Renderer2D.hpp  Triangulator2D.cpp  Triangulator2D.hpp
src/Engine/Servers/PhysicsServer/: CollisionQuadTree.cpp  CollisionQuadTree.hpp  CollisionSpatialGrid.cpp  CollisionSpatialGrid.hpp  PhysicsServer.cpp  PhysicsServer.hpp  QuadTree.cpp  QuadTree.hpp
src/Engine/Servers/PhysicsServer/Algorithms/: CollisionDetectionAlgorithm.cpp  CollisionDetectionAlgorithm.hpp
src/Math/: Math.hpp
